# osrs-sim

./: AGENTS.md  Cargo.toml  README.md
data/: README.md  ingest.json  item-ids.json  monster-ids.json
data/items/: 0.json  10023.json  10033.json  10034.json  10035.json  10037.json  10039.json  10041.json  10043.json  10045.json  10047.json  10049.json  10051.json  10053.json  10055.json  10057.json  10059.json  10061.json  10063.json  10065.json  10067.json  1007.json  10073.json  10074.json  10075.json  10077.json  10079.json  10081.json  10083.json  10085.json  10129.json  10142.json  10143.json  10144.json  10145.json  10146.json  10147.json  10148.json  10149.json  10156.json  (+1734 more)
data/monsters/: 1.json  10.json  100.json  101.json  1024.json  1025.json  1026.json  1027.json  1037.json  10374.json  10375.json  10376.json  1038.json  1039.json  10393.json  10394.json  10395.json  10397.json  10398.json  10399.json  104.json  10400.json  10402.json  1041.json  1042.json  1043.json  10435.json  10436.json  1044.json  1045.json  1046.json  1047.json  1048.json  1049.json  10492.json  10493.json  1050.json  10506.json  1051.json  10522.json  (+2733 more)
fixtures/: README.md
fixtures/builds/: voidwaker_bandos_slash_accurate.json  (+1 more)
meta/: gearscape-api.md  ideas.md  init-conversation-chatgpt_2026-01-09.md  other-conversation-claude_2026-01-09.md
scripts/: README.md  check.sh  ingest_all.py  ingest_entities.py  ingest_gearscape.py  ingest_items.py  ingest_items_default.py  ingest_monsters_wiki.py
src/: data.rs  effects.rs  formulas.rs  lib.rs  main.rs  model.rs
tests/: golden.rs
(+9 files in other folders)
